--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+default:
+    resource: ../src/Controller/
+    type: annotation
+
+admin:
+    resource: ../src/Controller/Admin/
+    type: annotation
+    prefix: /admin
