--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: lypage_php_dev
     build:
       context: ./php
+    environment:
+      - MASCOT_PATH=${MASCOT_PATH:-/var/www/default-mascots}
     volumes:
       - ../../:/var/www
       - ./php/ini/custom.ini:/usr/local/etc/php/conf.d/custom.ini
