Create default style, view, add some services, add scss, modify compose

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /.idea
 /docker/dev/logs
+node_modules
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -15,8 +16,3 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-
-###> phpunit/phpunit ###
-/phpunit.xml
-.phpunit.result.cache
-###< phpunit/phpunit ###
