--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,7 @@
 twig:
-    default_path: '%kernel.project_dir%/templates'
+    form_themes:
+     - '%kernel.project_dir%/templates'
+     - '%env(ADDITIONAL_TEMPLATE_PATH)%'
 
 when@test:
     twig:
