--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,6 +12,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             string $MASCOT_PATH: '%env(MASCOT_PATH)%'
+            string $BASE_TEMPLATE: '%env(BASE_TEMPLATE)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
