--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -5,12 +5,11 @@ on: [push]
 env:
   IMAGE_NAME: lypage-nginx
   DOCKERFILE_PATH: docker/build/nginx/Dockerfile
-  SEARCH_QUOTE: nginx-build
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "contains(github.event.head_commit.message, $SEARCH_QUOTE)"
+    if: "contains(github.event.head_commit.message, 'nginx-build')"
 
     steps:
       - uses: actions/checkout@v2
