--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-simplexml": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.5",
@@ -45,7 +46,11 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3",
+        "pedrotroller/php-cs-custom-fixer": "^2",
+        "phpstan/phpstan": "^1.2",
         "phpunit/phpunit": "^9.5",
+        "psalm/plugin-symfony": "^2.5.1",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
@@ -54,10 +59,7 @@
         "symfony/stopwatch": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*",
         "vimeo/psalm": "^4.13.1",
-        "psalm/plugin-symfony": "^2.5.1",
-        "weirdan/doctrine-psalm-plugin": "^1.1.0",
-        "friendsofphp/php-cs-fixer": "^3",
-        "pedrotroller/php-cs-custom-fixer": "^2"
+        "weirdan/doctrine-psalm-plugin": "^1.1.0"
     },
     "config": {
         "optimize-autoloader": true,
