--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -35,3 +35,5 @@ services:
       - POSTGRES_DB=lypage
     volumes:
       - ./postgreslib:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
