Add mascot groups, update starting migration, add the loading logic, update css, add a way to change the mascot group, etc... app-build

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ APP_SECRET=c61c9db178c240ec811c42de276d8459
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
-MASCOT_PATH=%kernel.project_path%/empty
-ADDITIONAL_TEMPLATE_PATH=%kernel.project_path%/empty
+MASCOT_PATH=%kernel.project_dir%/empty
+ADDITIONAL_TEMPLATE_PATH=%kernel.project_dir%/empty
 
 BASE_TEMPLATE=base.html.twig
