--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,8 +11,9 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            string $MASCOT_PATH: '%env(MASCOT_PATH)%'
-            string $BASE_TEMPLATE: '%env(BASE_TEMPLATE)%'
+            string $MASCOT_PATH: '%env(resolve:MASCOT_PATH)%'
+            string $BASE_TEMPLATE: '%env(resolve:BASE_TEMPLATE)%'
+            string $PUBLIC_DIR: '%kernel.project_dir%/public'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
