--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,6 +10,8 @@ framework:
         handler_id: null
         cookie_secure: false
         cookie_samesite: lax
+        gc_maxlifetime: 31104000
+        cookie_lifetime: 31104000
         storage_factory_id: session.storage.factory.native
 
     #esi: true
