Change rss feeds to be downloadable via qbittorrent app-build

--- a/.env
+++ b/.env
@@ -35,3 +35,8 @@ MASCOT_PATH=%kernel.project_dir%/empty
 ADDITIONAL_TEMPLATE_PATH=%kernel.project_dir%/empty
 
 BASE_TEMPLATE=base.html.twig
+
+QBITTORRENT_URL=
+QBITTORRENT_USERNAME=
+QBITTORRENT_PASSWORD=
+QBITTORRENT_BASE_PATH=/downloads/
