Update entities, update libraries, generate new migration, add active to page, etc. app-build

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ node_modules
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
