Update to symfony 7, fix multiple small issues, update some stuff whatever

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,8 +1,8 @@
 default:
     resource: ../src/Controller/
-    type: annotation
+    type: attribute
 
 admin:
     resource: ../src/Controller/Admin/
-    type: annotation
+    type: attribute
     prefix: /admin
