--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
   "name": "ly-page",
-  "version": "1.0.0",
-  "description": "Required javascript stuff for ly-page",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pkly/ly-page.git"
-  },
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "index:scss": "sass public/assets/scss/main.scss public/assets/css/main.css"
+    "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
-  "author": "pkly",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pkly/ly-page/issues"
-  },
-  "homepage": "https://github.com/pkly/ly-page#readme",
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "sass": "^1.43.5"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.11.10",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "npm-run-all2": "^6.1.1",
+    "prettier": "^3.0.3",
+    "typescript": "~5.3.0",
+    "vite": "^5.0.11",
+    "vue-tsc": "^1.8.27"
   }
 }
