--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -32,6 +33,7 @@
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-vue-devtools": "^7.0.14",
     "vue-tsc": "^1.8.27"
   }
 }
