--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -24,6 +24,16 @@ jobs:
         with:
           php_version: 8.3
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 'lts'
+
+      - name: Install NPM packages
+        run: npm install
+
+      - name: Build VUE application
+        run: npm run build-only
+
       - name: Build image
         run: docker build --build-arg=COMMIT=$(git rev-parse --short HEAD) . --file $DOCKERFILE_PATH --tag $IMAGE_NAME
 
