--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,6 +4,10 @@ framework:
 #    csrf_protection: false
     http_method_override: false
 
+    http_client:
+        proxy: '%env(default::PROXY_HTTP_URL)'
+        no_proxy: '%env(default::NO_PROXY_HOSTS)%'
+
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
