Allow proxies to be set in the application app-build

--- a/.env
+++ b/.env
@@ -37,3 +37,6 @@ QBITTORRENT_URL=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
 QBITTORRENT_BASE_PATH=/downloads/
+
+PROXY_HTTP_URL=
+NO_PROXY_HOSTS=
