add qbittorrent stuff

--- a/.env
+++ b/.env
@@ -35,3 +35,7 @@ MAILER_DSN=null://null
 
 MESSENGER_TRANSPORT_DSN=sync://
 
+QBITTORRENT_URL=
+QBITTORRENT_USERNAME=
+QBITTORRENT_PASSWORD=
+QBITTORRENT_BASE_PATH=
