--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "8.4.*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-simplexml": "*",
         "doctrine/dbal": "^3.9.5",
         "doctrine/doctrine-bundle": "^2.15",
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
