--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-simplexml": "*",
-        "doctrine/dbal": "^3.9.5",
+        "doctrine/dbal": "^3.10.0",
         "doctrine/doctrine-bundle": "^2.15",
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
         "doctrine/orm": "^3.5",
@@ -100,7 +100,9 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.2.6",
+        "friendsofphp/php-cs-fixer": "^3.82.2",
+        "pedrotroller/php-cs-custom-fixer": "^2.33.2",
+        "phpunit/phpunit": "^12.2.7",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
         "symfony/debug-bundle": "7.3.*",
