fix wallpaper handling fully, even though I hate the form ui, update repositories and more shit

--- a/.env
+++ b/.env
@@ -39,3 +39,6 @@ QBITTORRENT_URL=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
 QBITTORRENT_BASE_PATH=
+
+WALLPAPER_BASE_PATH=
+WALLPAPER_END_PATH=
