--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -7,12 +7,17 @@ services:
       context: ./php
     environment:
       - DATABASE_URL=mysql://lypage:lypage@lypage_mariadb:3306/lypage?serverVersion=11.7.2-MariaDB
+      - WALLPAPER_BASE_PATH=/home/ly/tempwalls
+      - WALLPAPER_END_PATH=/home/ly/outwalls
     volumes:
       - ../../:/var/www
       - ./php/ini/custom.ini:/usr/local/etc/php/conf.d/custom.ini
       - ./php/ini/opcache.ini:/usr/local/etc/php/conf.d/opcache.ini
       - ./php/conf/php-fpm-custom.conf:/usr/local/etc/php-fpm.d/zz-php-fpm-custom.conf:ro
       - ../../local-mnt:/var/www/public/mascots:ro
+      - /home/ly/tempwalls:/var/www/public/walls:ro
+      - /home/ly/tempwalls:/home/ly/tempwalls:ro
+      - /home/ly/outwalls:/home/ly/outwalls:rw
 
   lypage_nginx:
     container_name: lypage_nginx
@@ -24,6 +29,7 @@ services:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./logs/nginx:/var/log/nginx
       - ../../local-mnt:/var/www/public/mascots:ro
+      - /home/ly/tempwalls:/var/www/public/walls:ro
     ports:
       - "80:80"
 
